--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mayajs",
-  "version": "1.0.23",
+  "name": "xl",
+  "version": "0.0.1",
   "description": "A Simple http server library",
   "main": "src/server.js",
   "scripts": {
